# autoshot

./: .gitignore  API_DOCUMENTATION.md  PROJECT_DOCUMENTATION.md  README.md  backup_project.bat  pyproject.toml  test_autoshot.py  test_screenshot.py
autoshot/: __init__.py  image_processor.py  main.py  similarity_detector.py  window_manager.py
autoshot_cpp/: CMakeLists.txt  README.md
autoshot_cpp/include/: image_processor.h  similarity_detector.h  utils.h  window_manager.h
autoshot_cpp/resources/: config.json
autoshot_cpp/src/: image_processor.cpp  main.cpp  similarity_detector.cpp  utils.cpp  window_manager.cpp
